--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
     <div id="letterModal" class="modal">
       <div class="modal-content">
         <span class="close-button">&times;</span>
-        <p class="1">Happy Birthday my mother of my 2 children
+        <p class="1">Happy Birthday my Mahal and mother of my 2 children
           <br />
           Happy Birthday Mahal i wish you a happy and healthy life. Along with I LOVE YOU SO MUCH MY SUNSHINE my most favorite and pinakamahal kong person in the whole wide world
           <br />
           Thank you for loving and understanding me everyday especially since im not very good with processing my emotions and you're trying to help me get over my stuff and also making me happy overall
+         <br /> You also try to understand me everytime even if medyo oa na ako thank you for understanding me and helping me grow as a better Person.
           <br /> 
           You are the best thing that has ever been mine i love you so much i hope ma appreciate mo na more ang sadiri mo and your birthday because yaon me palagi i love you mwahhhh
           <br /> You taught me a lot and helped me alot and i would forever thank your for that now this day i want you to be always happy whenever bday mo<br />
@@ -55,7 +56,7 @@
           I love you always and forever and i will always love you forever and ever magiging stuck kana sako rahhh <br /> MWAHHH <br />Waken na big baby mo<br /></p>
           
           <span id="next-button">&#8594;</span>
-          <p> Balls</p> 
+
           
       </div>
     </div>
